--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /repo/plugin.program.advanced.emulator.launcher
 /repo/script.skinshortcuts
 /repo/skin.mediacenter
+/repo/plugin.program.chrome.launcher
