--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@
 /repo/script.skinshortcuts
 /repo/skin.mediacenter
 /repo/plugin.program.chrome.launcher
-repo/zips/plugin.program.newsstand/plugin.program.newsstand (no boxbacks).zip
+/repo/zips/plugin.program.newsstand/plugin.program.newsstand (no boxbacks).zip
