--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /repo/skin.mediacenter
 /repo/plugin.program.chrome.launcher
 /repo/zips/plugin.program.newsstand/plugin.program.newsstand (no boxbacks).zip
+repo/script.skin.helper.service/
